--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -55,3 +55,6 @@ typeMismatch.java.math.BigDecimal=Property {0} must be a valid number
 typeMismatch.java.math.BigInteger=Property {0} must be a valid number
 typeMismatch=Property {0} is type-mismatched
 
+
+#Product
+product.pricelist.label = Price list
