- fix #56 - updated some js libs - cleanup code - per env js script loading

--- a/grails-app/i18n/messages_it.properties
+++ b/grails-app/i18n/messages_it.properties
@@ -58,7 +58,7 @@ typeMismatch.java.math.BigInteger=La proprietà {0} deve essere un numero valido
 #Product
 product.pricelist.label = Listino prezzi
 
-spring.security.ui.forgotPassword.description = Ti verr&agrave; mandata una mail con le istruzioni
+spring.security.ui.forgotPassword.description = Riceverai una mail con le istruzioni
 spring.security.ui.login.forgotPassword = Password dimenticata
 spring.security.ui.login.signin = Login
 spring.security.ui.login.register = Registrazione utente
@@ -66,3 +66,7 @@ spring.security.ui.register.sent = E' stata inviata una mail - verifica la tua c
 spring.security.ui.forgotPassword.sent = E' stata inviata una mail - verifica la tua casella di posta
 spring.security.ui.register.submit = Crea il tuo account
 spring.security.ui.register.title = Group-buy registrazione
+spring.security.ui.register.header = Crea nuovo account
+
+spring.security.ui.forgotPassword.submit = Reimposta password
+spring.security.ui.forgotPassword.title = Password dimenticata
