--- a/grails-app/i18n/messages_it.properties
+++ b/grails-app/i18n/messages_it.properties
@@ -70,3 +70,10 @@ spring.security.ui.register.header = Crea nuovo account
 
 spring.security.ui.forgotPassword.submit = Reimposta password
 spring.security.ui.forgotPassword.title = Password dimenticata
+
+spring.security.ui.register.email.subject = Group Buy - Conferma registrazione
+spring.security.ui.register.email.greeting = Ciao {0}
+spring.security.ui.register.email.here = qui
+spring.security.ui.register.email.line1 = Hai creato un nuovo account su Group Buy con questo indirizzo e-mail.
+spring.security.ui.register.email.line2 = Se hai effettuato tu l'iscrizione clicca
+spring.security.ui.register.email.line3 = per confermare la registrazione.
