--- a/grails-app/i18n/messages_it.properties
+++ b/grails-app/i18n/messages_it.properties
@@ -54,10 +54,7 @@ typeMismatch.java.lang.Short=La proprietà {0} deve essere un numero valido
 typeMismatch.java.math.BigDecimal=La proprietà {0} deve essere un numero valido
 typeMismatch.java.math.BigInteger=La proprietà {0} deve essere un numero valido
 
-
-#Product
-product.pricelist.label = Listino prezzi
-
+#auth
 spring.security.ui.forgotPassword.description = Riceverai una mail con le istruzioni
 spring.security.ui.login.forgotPassword = Password dimenticata
 spring.security.ui.login.signin = Login
@@ -65,15 +62,67 @@ spring.security.ui.login.register = Registrazione utente
 spring.security.ui.register.sent = E' stata inviata una mail - verifica la tua casella di posta
 spring.security.ui.forgotPassword.sent = E' stata inviata una mail - verifica la tua casella di posta
 spring.security.ui.register.submit = Crea il tuo account
-spring.security.ui.register.title = Group-buy registrazione
+spring.security.ui.register.title = Proprioqui registrazione
 spring.security.ui.register.header = Crea nuovo account
 
 spring.security.ui.forgotPassword.submit = Reimposta password
 spring.security.ui.forgotPassword.title = Password dimenticata
 
-spring.security.ui.register.email.subject = Group Buy - Conferma registrazione
+spring.security.ui.register.email.subject = Proprioqui - Conferma registrazione
 spring.security.ui.register.email.greeting = Ciao {0}
 spring.security.ui.register.email.here = qui
-spring.security.ui.register.email.line1 = Hai creato un nuovo account su Group Buy con questo indirizzo e-mail.
+spring.security.ui.register.email.line1 = Hai creato un nuovo account su Proprioqui con questo indirizzo e-mail.
 spring.security.ui.register.email.line2 = Se hai effettuato tu l'iscrizione clicca
 spring.security.ui.register.email.line3 = per confermare la registrazione.
+
+#email
+email.madeBy = Fatto con il ❤️ dal Team di Proprioqui
+
+email.contact.subject = Richiesta di contatto da Proprioqui
+
+#site
+site.title = Proprioqui
+
+
+site.menu.logout = Esci
+site.menu.login = Entra
+site.menu.register = Registrazione
+
+site.menu.profile = Profilo
+site.menu.preferences = Preferenze
+
+site.menu.groups = Gruppi
+site.menu.suppliers = Attività
+site.menu.orders = Ordini
+site.menu.cta.createGroup = Crea il tuo gruppo
+
+
+site.menu.aboutus = Chi siamo
+site.menu.contacts = Contatti
+site.menu.support = Supporto
+site.menu.tos = Termini di Servizio
+site.menu.privacy = Regole della Privacy
+site.menu.cookie = Uso dei Cookie
+
+site.footer.writeus = Scrivici
+
+site.contact.email.info = info@proprioqui.it
+site.contact.email.office = amministrazione@proprioqui.it
+site.contact.email.web = webmaster@proprioqui.it
+
+
+#buttons
+button.cancel = Annulla
+button.create = Crea
+button.newOrder = Nuovo ordine
+
+#suppliers
+supplier.title = Negozio
+supplier.address = Indirizzo
+
+#orders
+order.new = Nuovo ordine
+order.groupSelect = Seleziona gruppo
+order.description = Descrizione
+order.description.tip = Inserisci una breve descrizione dell'ordine
+
