new URL mapping and code reorganization, after project rename + some i18n

--- a/grails-app/i18n/messages_it.properties
+++ b/grails-app/i18n/messages_it.properties
@@ -83,7 +83,6 @@ email.contact.subject = Richiesta di contatto da Proprioqui
 #site
 site.title = Proprioqui
 
-
 site.menu.logout = Esci
 site.menu.login = Entra
 site.menu.register = Registrazione
@@ -92,10 +91,14 @@ site.menu.profile = Profilo
 site.menu.preferences = Preferenze
 
 site.menu.groups = Gruppi
-site.menu.suppliers = Attività
+site.menu.suppliers = Negozi
 site.menu.orders = Ordini
 site.menu.cta.createGroup = Crea il tuo gruppo
 
+site.menu.group.board = Scheda
+site.menu.group.edit = Modifica
+site.menu.group.members = Iscritti
+site.menu.group.orders = Ordini
 
 site.menu.aboutus = Chi siamo
 site.menu.contacts = Contatti
@@ -115,9 +118,16 @@ site.contact.email.web = webmaster@proprioqui.it
 button.cancel = Annulla
 button.create = Crea
 button.newOrder = Nuovo ordine
+button.orderNow = Ordina ora
+button.start = Inizia
+
+
+#groups
+group.title = Gruppo di acquisto
 
 #suppliers
 supplier.title = Negozio
+supplier.list.title = Negozi
 supplier.address = Indirizzo
 
 #orders
@@ -126,3 +136,5 @@ order.groupSelect = Seleziona gruppo
 order.description = Descrizione
 order.description.tip = Inserisci una breve descrizione dell'ordine
 
+#user
+user.orders = I miei ordini
