--- a/grails-app/i18n/messages_it.properties
+++ b/grails-app/i18n/messages_it.properties
@@ -75,6 +75,7 @@ spring.security.ui.register.email.line1 = Hai creato un nuovo account su Proprio
 spring.security.ui.register.email.line2 = Se hai effettuato tu l'iscrizione clicca
 spring.security.ui.register.email.line3 = per confermare la registrazione.
 
+#'
 #email
 email.madeBy = Fatto con il ❤️ dal Team di Proprioqui
 
@@ -109,10 +110,10 @@ site.menu.cookie = Uso dei Cookie
 
 site.footer.writeus = Scrivici
 
+#contact
 site.contact.email.info = info@proprioqui.it
 site.contact.email.office = amministrazione@proprioqui.it
 site.contact.email.web = webmaster@proprioqui.it
-
 
 #buttons
 button.cancel = Annulla
@@ -120,10 +121,23 @@ button.create = Crea
 button.newOrder = Nuovo ordine
 button.orderNow = Ordina ora
 button.start = Inizia
+button.groupJoin =  Iscriviti al gruppo
+button.groupLeave = Lascia gruppo
 
+#ui
+list.orderBy = Ordina per
+list.newest = Più recente
+list.oldest = Più vecchio
+list.nearest = Più vicino
+
+#fields
+fields.address = Indirizzo
 
 #groups
 group.title = Gruppo di acquisto
+group.list.title = Gruppi di acquisto
+group.action.admin = Amministra gruppo
+group.action.favourite = Partecipa al gruppo
 
 #suppliers
 supplier.title = Negozio
