new texts + i18n + navigation links

--- a/grails-app/i18n/messages_it.properties
+++ b/grails-app/i18n/messages_it.properties
@@ -101,7 +101,9 @@ site.menu.group.edit = Modifica
 site.menu.group.members = Iscritti
 site.menu.group.orders = Ordini
 
+site.menu.home = Home
 site.menu.aboutus = Chi siamo
+site.menu.faq = Domande frequenti
 site.menu.contacts = Contatti
 site.menu.support = Supporto
 site.menu.tos = Termini di Servizio
