CTA at bottom of list pages

--- a/grails-app/i18n/messages_it.properties
+++ b/grails-app/i18n/messages_it.properties
@@ -148,6 +148,7 @@ group.title = Gruppo di acquisto
 group.list.title = Gruppi di acquisto
 group.action.admin = Amministra gruppo
 group.action.favourite = Partecipa al gruppo
+group.action.myFavourite = Stai partecipando a questo gruppo
 group.orders.title = Ordini del gruppo di acquisto
 
 #suppliers
