Suppliers close to purchasing groups address. Sample url `/negozi?lat=45.51294&lon=9.22479`

--- a/grails-app/i18n/messages_it.properties
+++ b/grails-app/i18n/messages_it.properties
@@ -127,6 +127,7 @@ button.manage = Gestisci
 button.delete = Elimina
 button.groupJoin =  Iscriviti al gruppo
 button.groupLeave = Lascia gruppo
+button.nearestSuppiers = Negozi vicini
 
 #ui
 list.orderBy = Ordina per
