fix auth error message for locked account

--- a/grails-app/i18n/messages_it.properties
+++ b/grails-app/i18n/messages_it.properties
@@ -54,19 +54,34 @@ typeMismatch.java.lang.Short=La proprietà {0} deve essere un numero valido
 typeMismatch.java.math.BigDecimal=La proprietà {0} deve essere un numero valido
 typeMismatch.java.math.BigInteger=La proprietà {0} deve essere un numero valido
 
-#auth
+#springSecurity
+springSecurity.errors.login.disabled = Account non attivo o disabilitato
+springSecurity.errors.login.locked = Account non attivo o bloccato
+springSecurity.errors.login.fail = Impossibile trovare un utente con lo username e password specificati
+
+#spring.security.ui
+spring.security.ui.forgotPassword.submit = Reimposta password
+spring.security.ui.forgotPassword.title = Password dimenticata
 spring.security.ui.forgotPassword.description = Riceverai una mail con le istruzioni
+spring.security.ui.forgotPassword.header = Password dimenticata
+spring.security.ui.forgotPassword.email.subject = Password reset
+spring.security.ui.forgotPassword.noEmail = Non troviamo nessuna email per il tuo account
+spring.security.ui.forgotPassword.user.notFound = Non troviamo nessuna corrispondenza per questo username
+spring.security.ui.forgotPassword.sent = E' stata inviata una mail - verifica la tua casella di posta
+spring.security.ui.forgotPassword.email.greeting = Ciao {0}
+spring.security.ui.forgotPassword.email.here = qui
+spring.security.ui.forgotPassword.email.line1 = Tu (o qualcuno che finge di essere te) ha richiesto il cambio della tua password.
+spring.security.ui.forgotPassword.email.line2 = Se non hai fatto questa richiesta, ignora l'email non sono stati fatti cambiamenti.
+spring.security.ui.forgotPassword.email.line3 = Se hai fatto la richiesta, allora clicca
+spring.security.ui.forgotPassword.email.line4 = per reimpostare la tua password.
+
 spring.security.ui.login.forgotPassword = Password dimenticata
 spring.security.ui.login.signin = Login
 spring.security.ui.login.register = Registrazione utente
 spring.security.ui.register.sent = E' stata inviata una mail - verifica la tua casella di posta
-spring.security.ui.forgotPassword.sent = E' stata inviata una mail - verifica la tua casella di posta
 spring.security.ui.register.submit = Crea il tuo account
 spring.security.ui.register.title = Proprioqui registrazione
 spring.security.ui.register.header = Crea nuovo account
-
-spring.security.ui.forgotPassword.submit = Reimposta password
-spring.security.ui.forgotPassword.title = Password dimenticata
 
 spring.security.ui.register.email.subject = Proprioqui - Conferma registrazione
 spring.security.ui.register.email.greeting = Ciao {0}
@@ -142,7 +157,8 @@ fields.order = Ordine
 fields.status = Stato
 
 #actions
-
+action.viewMap = Visualizza su mappa
+action.orderNowFrom = Ordina ora da
 
 #groups
 group.title = Gruppo di acquisto
